feat: [#132 - ] Android 테마 이미지 편집 기능 개선 - ThemePathManager: 테마 이미지 경로 계산 기능 개선 - AndroidComponentDto: 불필요한 필드 제거 및 파일 경로, 파일 확장자 필드 추가 - NinePatchConverter: png 데이터를 9-patch-png 데이터로 변환하는 기능 추가 - FileExtension: png와 9-patch-png 분리 - AndroidThemeImageEditor 기능 개선 Fixes: #132